feat: implement Exa AI MCP server with search tools
Transform the template MCP server into a functional Exa AI integration. The server exposes four tools for interacting with Exa's AI-powered search API:

- **exa_search**: Web search with neural, fast, auto, and deep search modes
- **exa_find_similar**: Discover pages similar to a given URL
- **exa_get_contents**: Fetch and extract content from URLs with live crawling support
- **exa_answer**: AI-generated answers with citations

The SDK is generated from Exa's OpenAPI specification using ogen, with a helper command to fix spec compatibility issues. Authentication uses the EXA_API_KEY environment variable.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -50,6 +50,6 @@ changelog:
 release:
   github:
     owner: spachava753
-    name: my-mcp-server
+    name: exa-mcp
   draft: false
   prerelease: auto
